feat: unit tests and move to user task query controller